--- a/pom.xml
+++ b/pom.xml
@@ -104,8 +104,14 @@
     <profiles>
         <profile>
             <id>native</id>
+            <activation>
+                <property>
+                    <name>native</name>
+                </property>
+            </activation>
             <properties>
                 <quarkus.package.type>native</quarkus.package.type>
+                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
             </properties>
         </profile>
     </profiles>
